[package]
name = "aoc_2019"
version = "0.1.0"
authors = ["Matt Smith <trebinor@users.noreply.github.com>"]
edition = "2021"

[lib]
bench = false

[dependencies]
aoc-runner = "0.3"
aoc-runner-derive = "0.3"
itertools = "0.8"
regex = "1"
lazy_static = "1.4.0"
num = "0.2"
rand = "0.7"
chrono = "0.4"
petgraph = "0.5"
pathfinding = "2.0.3"
